Reorganize  config and settings